--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
             <h1 class="h-large">テストタイトル</h1>
 
             <div class="card-wrap">
+                <div class="card animate_animated animate_shakeX">
                 <div class="card">
                     <img src="photo.jpg" alt="">
                     <div class="txt">
@@ -129,6 +130,7 @@
                     <div class="txt">
                         <p>写真の解説文：タブレットの写真</p>
                     </div>
+                </div>
                 </div>
             </div>
     </main>
