--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
                 </div>
             </div>
     </main>
+    <script async defer src = "https://scripts.withcabin.com/hello.js" >  </script >
 </body>
+
 
 </html>
